refactor plugin and resolver sonarqube alarm